[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = ""
authors = ["Felipe Vargas <felipevargas.bz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.16.2"
speechrecognition = "^3.10.3"
pyttsx3 = "^2.90"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
